force-app/main/default/objects/Kafka_Oppgave_Event__e/Kafka_Oppgave_Event__e.object-meta.xml
<CustomObject>
    <label>Kafka Oppgave Event</label>
    <pluralLabel>Kafka Oppgave Events</pluralLabel>
</CustomObject>