force-app/main/default/objects/Kafka_Oppgave_Event__e/fields/CRM_Key__c.field-meta.xml
<CustomField>
    <fullName>CRM_Key__c</fullName>
    <description>Contains the key value from Kafka for a given message</description>
    <label>Key</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>