force-app/main/default/objects/Kafka_Oppgave_Event__e/fields/CRM_Offset__c.field-meta.xml
<CustomField>
    <fullName>CRM_Offset__c</fullName>
    <description>Offset number from kafka queue</description>
    <label>Offset</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>