force-app/main/default/objects/Kafka_Oppgave_Event__e/fields/CRM_Partition__c.field-meta.xml
<CustomField>
    <fullName>CRM_Partition__c</fullName>
    <label>Partition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>