force-app/main/default/objects/Kafka_Oppgave_Event__e/fields/CRM_Value__c.field-meta.xml
<CustomField>
    <fullName>CRM_Value__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>